# phnix-discord-bot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  automod.py  bot_database.db  commands.py  compose.yaml  config.json  configuration.py  data.py  database_handle.py  db.schema  last_stream.ini  last_video_UC9T9mnA5u12DlQjeywuonpw.ini  last_video_UCj4zC1Hfj-uc90FUXzRamNw.ini  level.py  levels.py  logger.py  main.py  misc.py  moderation.py  parse_data.py  pyproject.toml  requirements.txt  setup_data.py  system.py  token.env  twitch.py  util.py  youtube.py
.github/workflows/: codeql.yml  pre-commit.yml  pylint.yml
commands/: __init__.py  level.py  misc.py  moderation.py
data/: __init__.py  commands.txt  level_dict.py  levels.txt  muted_dict.py  warn_dict.py
src/: automod.py  bot.py  colour_formatting.py  config.json  config.py  configuration.py  constants.py  database_handle.py  levels.py  logger.py  main.py  message_caching.py  setup_data.py  twitch.py  util.py  youtube.py
src/cogs/: levels.py  misc.py  moderation.py  starboard.py  welcome_farewell.py  youtube_twitch.py
src/command/: command.py  commands.py
src/command/development/: exec.py  whatdoesthisdo.py
src/command/leveling/: leaderboards.py
src/command/other/: help.py  hug.py  pad.py
src/command/system/: help.py  ping.py
src/commands/: __init__.py  level.py  misc.py  moderation.py  system.py
src/data/: setup_data.py
src/main/: configuration.py  levels.py  main.py  setup_data.py
src/main/command/: command.py  commands.py
src/main/command/development/: whatdoesthisdo.py
src/main/command/leveling/: leaderboards.py
src/main/command/other/: help.py
src/main/listener/: messageReactionListener.py
src/main/util/: twitch.py  util.py  youtube.py
src/util/: twitch.py  util.py  youtube.py
