[tool.poetry]
name = "Phnix Discord Bot"
version = "2.0.0dev1"
description = "A Discord bot that does stuff."
authors = ["Bobby-McBobface <54757965+Bobby-McBobface@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {version="^2.3.2", extras = ["speed"]}
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
uvloop = {version = "^0.19.0", optional = true}
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"
black = "^23.11.0"
poetry = "^1.7.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pyright = "^1.1.335"

[tool.pylint.format]
max-line-length = "88"
good-names = "i,j,k,ex,Run,_,xp"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
