[tool.poetry]
name = "Phnix Discord Bot"
version = "2.0.0dev1"
description = "A Discord bot that does stuff."
authors = ["Bobby-McBobface <54757965+Bobby-McBobface@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {version="^2.4.0", extras = ["speed"]}
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
uvloop = {version = "^0.21.0", optional = true}

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
poetry = "^2.0.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
pyright = "^1.1.391"

[tool.pylint.format]
max-line-length = "88"
good-names = "i,j,k,ex,Run,_,xp"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
