[tool.poetry]
name = "Phnix Discord Bot"
version = "2.0.0dev1"
description = "A Discord bot that does stuff."
authors = ["Bobby-McBobface <54757965+Bobby-McBobface@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {version="^2.6.4", extras = ["speed"]}
aiosqlite = "^0.22.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
black = "^26.1.0"
poetry = "^2.3.2"
isort = "^7.0.0"
pre-commit = "^4.5.1"
pyright = "^1.1.408"

[tool.pylint.format]
max-line-length = "88"
good-names = "i,j,k,ex,Run,_,xp"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
